--- a/styleBoiler.css
+++ b/styleBoiler.css
@@ -3,7 +3,7 @@ body {
 }
 
 .mainSpaceBackground {
-	background-image: url("pattern.jpg");
+	background-image: url("Images/pattern.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 100%;
@@ -70,6 +70,13 @@ body {
 	position: absolute;
 	top: 35.5%;
 	left: 12.5%;	
+}
+
+.skills{
+	position:relative;
+	line-height:0.4;
+	text-align:center;
+	font-size:12pt;
 }
 
 .myPhoto {
