--- a/styleIndex.css
+++ b/styleIndex.css
@@ -3,7 +3,7 @@ body {
 }
 
 .mainSpaceBackground {
-	background-image: url("pattern.jpg");
+	background-image: url("Images/pattern.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 100%;
@@ -33,7 +33,7 @@ body {
 .mainSpaceText{
 	font-size:24pt;
 	text-align:center;
-	font-size:24pt;
+	font-size:200%;
 	line-height:175%;	
 }
 
@@ -60,7 +60,7 @@ body {
  	padding-top:0;
  	background-color: #52B3BA;
  }	
- 
+
  .contactBox{
  	box-shadow: 0 0 5px 5px rgba(0, 140, 186, 0.5);
  	background-color: #5B82BA;
@@ -84,7 +84,14 @@ body {
  	font-size:36pt;
  	top: 1%;
  }
- 
+
+.skills{
+	position:relative;
+	line-height:0.4;
+	text-align:center;
+	font-size:12pt;
+}
+
  .shortAboutMe{
  	position:relative;
  	bottom:6.5%;
@@ -98,7 +105,14 @@ body {
 	top:6.5%;
 	line-height: 0.4;
 	text-align: center;
-	font-size: 12pst;
+	font-size: 12;
 	
 }
 
+.contactForm{
+        position:relative;
+ 	top:10%;
+	line-height:0.4;
+	text-align:center;
+        font-size: 12;
+}
