--- a/stylemyProjects.css
+++ b/stylemyProjects.css
@@ -3,7 +3,7 @@ body {
 }
 
 .mainSpaceBackground {
-	background-image: url("pattern.jpg");
+	background-image: url("Images/pattern.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
@@ -93,6 +93,14 @@ body {
 	line-height: 0.4;
 	text-align: center;
 	font-size: 12pt;
+}
+
+
+.skills{
+	position:relative;
+	line-height:0.4;
+	text-align:center;
+	font-size:12pt;
 }
 
 .contactInfo{
