--- a/styleIndex.css
+++ b/styleIndex.css
@@ -1,12 +1,16 @@
 body {
 	background-color: white;
+	min-width:700px;
+	min-width:1000px;
+	background-image: url("Images/pattern.jpg");
+	background-repeat:repeat-y;
+	background-position: center;
+	background-size: 100%;
+
+
 }
 
 .mainSpaceBackground {
-	background-image: url("Images/pattern.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 100%;
 	position: absolute;
 	top:15%;
 	left:20%;
@@ -38,6 +42,7 @@ body {
 }
 
 .navBar {
+	min-width:1000px;
 	background-color: #E3E1D3;
 	position:absolute;
 	top:0%;
@@ -52,12 +57,12 @@ body {
  }
  
  .sideBar{
-     width: 20%;
+        width: 20%;
  	height: 100%;	
- 	position: absolute;
- 	left:0;
- 	top:0;
- 	padding-top:0;
+ 	position:absolute;
+	left:0%;
+	top:0%;
+	padding-top:0%;
  	background-color: #52B3BA;
  }	
 
