Major text additions to every page of the site

--- a/stylemyProjects.css
+++ b/stylemyProjects.css
@@ -33,10 +33,12 @@ body {
 }
 
 .mainSpaceText{
-	font-size:24pt;
+	font-size:14pt;
 	text-align:center;
-	
-	
+}
+h4{
+	text-align:left;
+	line-height:40%;
 }
 
 .navBar {
